--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
+    "object-hash": "^3.0.0",
+    "pg": "^8.11.3",
     "sequelize": "^6.37.1"
   }
 }
