--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
   },
+  "engines": {
+    "node": "20.11.0"
+  },
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
