--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "nodemon": "^3.1.0",
     "object-hash": "^3.0.0",
     "pg": "^8.11.3",
-    "sequelize": "^6.37.1",
-    "serverless-http": "^3.2.0"
+    "sequelize": "^6.37.1"
   }
 }
